# deu-italernen

./: CMakeLists.txt  README.md  controlla_risposte.txt  domande_output.txt  main.cpp  ollamaoutput.txt  returnarticles.py
csvfiles/: attempt_counter.csv  coniugverbi.csv  flashcards.csv  scheda.csv  scores.csv  selected_indices.csv
flashcards/: account.cpp  account.h  flashcards.cpp  flashcards.h  gioca.cpp  gioca.h  scheda.cpp  scheda.h  search.cpp  search.h  settings.cpp  settings.h  statistiche.cpp  statistiche.h
giornale/: array.cpp  array.h  articoli.cpp  articoli.h  giornale.cpp  giornale.h  impostazioni.cpp  impostazioni.h  invio.cpp  invio.h  listagiornali.cpp  listagiornali.h  mappa.cpp  mappa.h
scheda_history/: scheda_20250725_113146.csv
verbi/: correction.cpp  correction.h  verbiinterface.cpp  verbiinterface.h
